--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "x-investment-backend",
   "version": "1.0.0",
   "description": "X Investment - real backend (simulation)",
+  "type": "module",
   "main": "server/server.js",
   "scripts": {
     "start": "node server/server.js"
@@ -14,6 +15,6 @@
     "fs-extra": "^11.1.1"
   },
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   }
 }
